feat: updated config.yml and added guidance
Took 1 hour 7 minutes